# becquerel

./: .bumpversion.cfg  .gitignore  .liccheck.ini  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  COPYRIGHT.txt  CREATE_ISSUE_AND_PR.sh  FEATURE_REQUEST.md  HISTORY.md  LICENSE.txt  MANIFEST.in  PR_DESCRIPTION.md  README.md  RELEASING.md  SUBMISSION_COMPLETE.md  SUBMISSION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_migrad_kws_demo.py
.github/workflows/: coveralls.yaml  pip_build_test.yaml  pre-commit.yaml  pypi.yaml  tests.yaml
becquerel/: __init__.py  __metadata__.py
becquerel/core/: __init__.py  autocal.py  calibration.py  energycal.py  fitting.py  peakfinder.py  peaks.py  plotting.py  rebin.py  spectrum.py  utils.py
becquerel/io/: __init__.py  h5.py
becquerel/parsers/: README.markdown  __init__.py  cnf.py  cnf_file.py  h5.py  iec1455.py  n42.py  n42.xsd  n42_file.py  parsers.py  spc.py  spc_file.py  spe.py  spe_file.py  spectrum_file.py
becquerel/parsers/n42/: Annex_B_n42.xml  Annex_C_n42.xml  Annex_D_alarmed_n42.xml  Annex_D_n42.xml  Annex_E_n42.xml  Annex_F_n42.xml  Annex_G_n42.xml  Annex_H_n42.xml  Annex_I_n42.xml  Annex_L_n42.xml  n42.xsd
becquerel/tools/: __init__.py  _nndc_dummy_text.py  df_cache.py  element.py  isotope.py  isotope_qty.py  isotope_quantity.py  materials.py  materials_compendium.py  materials_error.py  materials_nist.py  nai_saturation.py  nndc.py  tabata.py  units.py  wallet_cache.py  xcom.py
examples/: autocal.ipynb  calibrations.ipynb  energycal.ipynb  fitting.ipynb  isotope_api.ipynb  isotopes.ipynb  misc.ipynb  n42.ipynb  nndc.ipynb  nndc_chart_of_nuclides.ipynb  nndc_chart_of_nuclides.py  nndc_examples.ipynb  nndc_nuc_ba133.py  nndc_nuc_cs137.py  nndc_nuc_u235.py  nndc_rad_0662.py  nndc_rad_1460.py  nndc_rad_th232_series.py  nndc_rad_u238_series.py  nndc_wallet.py  overview.ipynb  plotting.ipynb  plotting_examples.ipynb  quickstart.ipynb  rebinning.ipynb  spectrum.ipynb  spectrum_examples.ipynb  xcom.ipynb  xcom_compound.py  xcom_element.py  xcom_examples.ipynb  xcom_mixture.py
paper/: paper.bib  paper.md
tests/: autocal_test.py  calibration_test.py  core_test.py  df_cache_test.py  element_test.py  energycal_test.py  fitting_test.py  h5_tools_test.py  isotope_qty_test.py  isotope_test.py  materials_test.py  metadata_test.py  n42_test.py  nndc_test.py  parsers_test.py  plotting_test.py  rebin_test.py  spectrum_io_test.py  spectrum_test.py  test_utils.py  utils.py  utils_test.py  wallet_cache_test.py  xcom_test.py
tests/samples/: 01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.cnf  01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.csv  01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.n42  01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.pcf  01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.spc  01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.txt  01122014152731-GT01122014182338-GA37.CHN  1110C NAA cave background May 2017.CHN  1110C NAA cave background May 2017.spe  1110C NAA cave pottery.CHN  1110C NAA cave pottery.Spe  2025-11-11_17-43-19-121196.cnf  Alcatraz14.Spc  Alcatraz14.chn  Alcatraz14.csv  Alcatraz14.n42  Alcatraz14.pcf  Alcatraz14.txt  INVENTORY.md  Mendocino_07-10-13_Acq-10-10-13.CHN  Mendocino_07-10-13_Acq-10-10-13.Spe  Mendocino_07-10-13_Acq-10-10-13.csv  Mendocino_07-10-13_Acq-10-10-13.h5  Mendocino_07-10-13_Acq-10-10-13.n42  Mendocino_07-10-13_Acq-10-10-13.pcf  Mendocino_07-10-13_Acq-10-10-13.spc  Mendocino_07-10-13_Acq-10-10-13.txt  README.md  SGM102432.csv  SGM102432.spe  digibase_5min_30_1.spe  hpge_dummy_test_01.iec  hpge_dummy_test_02a.iec  hpge_dummy_test_02b.iec  hpge_dummy_test_03.iec  hpge_dummy_test_04.iec  hpge_dummy_test_05.iec  nai_detector.csv  nai_detector.spe  sim_spec.csv  (+1 more)
tests/samples_converted/: 01122014152731-GT01122014182338-GA37.4963000N-GO122.4633000W.spe  Alcatraz14.spe
